<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

<Spinner
    android:id="@+id/auto_choose_spinner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/greyColor"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/go_to_tank_form_button"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_new_tankup"
            android:text="@string/new_tankup"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/go_to_collision_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/go_to_repair_button"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_repair"
            android:text="@string/new_repair"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/new_car_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/go_to_collision_button"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_car_crash"
            android:text="@string/new_collision"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/go_to_tank_form_button"
            app:layout_constraintStart_toEndOf="@+id/new_car_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/new_car_button"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_alignEnd="@+id/go_to_repair_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_new_car"
            android:text="@string/new_car"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/go_to_collision_button"
            app:layout_constraintStart_toEndOf="@+id/go_to_repair_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>